# advent-of-code-2024

./: .gitignore  .lfsconfig  Cargo.toml  README.md  build.rs  sysinfo.sh
.cargo/: config.toml
.github/workflows/: codspeed.yml
benches/: common.rs  day1.rs  day2.rs  main.rs  today.rs
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  template.rs  utils.rs
src/day1/: mod.rs
src/luts/: day21_luts.rs
