[package]
name = "advent-of-code-2024"
version = "0.1.0"
authors = ["Kasparas Masiukas kmasiukas@gmail.com"]
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
rand = "0.8.5"

[[bench]]
name = "today"
harness = false

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }
reqwest = { version = "0.12.9", features = ["blocking"] }
