[package]
name = "advent-of-code-2024"
version = "0.1.0"
authors = ["Kasparas Masiukas kmasiukas@gmail.com"]
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
memchr = "2.7.4"
rand = "0.8.5"
rustc-hash = "2.1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "main"
harness = false

[build-dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
fxhash = "0.2.1"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }
paste = "1.0.15"
reqwest = { version = "0.12.9", features = ["blocking"] }
